--- a/index.css
+++ b/index.css
@@ -35,6 +35,7 @@ header img {
 header nav {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin: 1rem auto 0;
 }
 
 nav a{
@@ -172,6 +173,8 @@ footer nav a {
     border: 2px solid var(--color-black);
     box-shadow: 4px 4px 0 var(--color-black);
     font-size: 1.5rem;
+    padding: .5rem;
+    width: 100%;
 }
 
 
@@ -202,4 +205,40 @@ footer nav a {
 
 .text-primary {
     color: var(--color-primary);
+}
+
+@media screen  and (min-width: 40rem) {
+    header nav {
+        display: block;
+        text-align: center;
+    }
+    
+    .card {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .card:nth-child(2n) {
+        margin-top: 1rem;
+    }
+}
+
+@media screen and (min-width: 48rem) {
+    header div {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    header img,
+    header nav,
+    header .button {
+        margin: 0;
+    }
+    
+}
+
+@media screen {
+    
 }
